<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="CylinderType" Id="{13bf499e-e913-4d32-ab74-afcf8c32827e}">
    <Declaration><![CDATA[
TYPE CylinderType :
(
	CylinderType_Default := 0, //常规的气缸
	CylinderType_Vacuum := 1, //真空发生器
	CylinderType_ButV := 2 // GateDoor
)UINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>